# isai-sourcing-pipeline

./: .dockerignore  .gitignore  Dockerfile  prefect.yaml  pyproject.toml
.github/workflows/: deploy.yml
assets/: country_codes.json
how_tos/: code_reconciliation_in_the_three_input_tables.md  crunchbase_country_codes.md  draft_tables_to_import_crunchbase.md  filter_crunchbase_org.md  founder_reconciliation.md  founding_rounds_reconciliation.md  how_to_call_deployment.md  how_to_parse_companies.md  how_to_parse_funding.md  how_to_parse_people.md
scripts/: crunchbase_build_funding_status_per_org.py  crunchbase_export_funding_rounds.py  crunchbase_export_people.py  crunchbase_filter_org_based_on_isai_scope.py  crunchbase_filter_org_by_funding_status.py  crunchbase_parse_and_push.py  csvs_to_parquet.py  traxcn_extract_csvs_from_xlsx_export.py  traxcn_parse_and_push.py
src/config/: clients.py  settings.py
src/flows/: business_calculus_pipeline.py  business_processing.py  compute_search_resources.py  enrichment.py  etl.py  full_pipeline.py  ingest_trigger.py  reconciliation.py  traxcn_ingestion.py  website_enrichment.py
src/tasks/: __init__.py  annotate_company_tags.py  asses_traxcn_export.py  companies_reconciliation.py  compute_founders_values.py  compute_funding_metrics.py  compute_scores.py  dealroom_enrichment.py  embed_textual_dimensions.py  founders_reconciliation.py  funding_rounds_reconciliation.py  get_companies.py  (+8 more)
terraform/: .terraform.lock.hcl  locals.tf  main.tf  outputs.tf  providers.tf  terraform-variables.env  terraform.tfvars  variables.tf
(+26 files in other folders)
