[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.8.0",
    "fastparquet>=2025.12.0",
    "mistralai>=1.12.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "prefect>=3.6.16",
    "pyarrow>=23.0.0",
    "pydantic-settings>=2.12.0",
    "supabase>=2.27.3",
    "tqdm>=4.67.3",
]
